--- a/www/index.html
+++ b/www/index.html
@@ -1,104 +1,152 @@
 <html>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css"
+  />
 
-  <script src="https://code.jquery.com/jquery-3.5.1.js" /></script>
-  <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js" /></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <script src="/js/henson.js"></script>
 
-    <div class="container">
+  <div class="container">
     <h1>Henson app</h1>
-    </div>
+  </div>
 
-    <div class="container">
+  <div class="container">
     <div class="mb-3">
-      <button type="button" class="btn btn-primary"
-        data-toggle="modal" data-target="#auth-modal"
-      >Login</button>
-      <button type="button" class="btn btn-primary" id="auth-logout">Logout</button>
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-toggle="modal"
+        data-target="#auth-modal"
+      >
+        Login
+      </button>
+      <button type="button" class="btn btn-primary" id="auth-logout">
+        Logout
+      </button>
     </div>
-    </form>
-    </div>
+  </div>
 
-    <div class="container">
+  <div class="container">
     <h2>Tasks List</h2>
-    <table id="tasks" class="table table-striped" style="width:100%">
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th data-orderable="false">Task Text</th>
-                <th>Done</th>
-                <th data-orderable="false">Edited</th>
-                <th data-orderable="false">&nbsp;</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-        <tfoot>
-        </tfoot>
+    <table id="tasks" class="table table-striped" style="width: 100%">
+      <thead>
+        <tr>
+          <th>id</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th data-orderable="false">Task Text</th>
+          <th>Done</th>
+          <th data-orderable="false">Edited</th>
+          <th data-orderable="false">&nbsp;</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+      <tfoot></tfoot>
     </table>
-    </div>
+  </div>
 
-    <div class="container">
+  <div class="container">
     <h2>New task</h2>
 
     <form id="add-new-task">
-    <div class="mb-3">
+      <div class="mb-3">
         <label for="userName" class="form-label">User Name</label>
-          <input type="text" class="form-control" id="userName" name="name" placeholder="Your Name">
-    </div>
-    <div class="mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="userName"
+          name="name"
+          placeholder="Your Name"
+        />
+      </div>
+      <div class="mb-3">
         <label for="emailInput" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="emailInput" name="email" placeholder="name@example.com">
-    </div>
-    <div class="mb-3">
+        <input
+          type="email"
+          class="form-control"
+          id="emailInput"
+          name="email"
+          placeholder="name@example.com"
+        />
+      </div>
+      <div class="mb-3">
         <label for="taskText" class="form-label">Task text</label>
-          <textarea class="form-control" id="taskText" rows="3" name="taskText"></textarea>
-    </div>
-    <div class="mb-3">
-          <button type="submit" class="btn btn-primary mb-3">Add New Task</button>
-    </div>
+        <textarea
+          class="form-control"
+          id="taskText"
+          rows="3"
+          name="taskText"
+        ></textarea>
+      </div>
+      <div class="mb-3">
+        <button type="submit" class="btn btn-primary mb-3">Add New Task</button>
+      </div>
     </form>
-    </div>
-
-
+  </div>
 
   <div class="container">
-  <div class="modal fade" id="auth-modal" tabindex="-1" role="dialog" aria-labelledby="authModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="authModalLongTitle">Login</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-
-    <form id="auth-login">
-    <div class="mb-3">
-        <label for="emailInput" class="form-label">User Name</label>
-        <input type="text" class="form-control" id="authUserName" name="name" placeholder="YourName">
-    </div>
-    <div class="mb-3">
-        <label for="emailInput" class="form-label">Password</label>
-        <input type="password" class="form-control" id="authPassword" name="passwd" placeholder="Password">
-    </div>
-    <div class="mb-3">
-          <button type="submit" class="btn btn-primary mb-3">Login</button>
-    </div>
-    </form>
-
+    <div
+      class="modal fade"
+      id="auth-modal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="authModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="authModalLongTitle">Login</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="auth-login">
+              <div class="mb-3">
+                <label for="emailInput" class="form-label">User Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="authUserName"
+                  name="name"
+                  placeholder="YourName"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="emailInput" class="form-label">Password</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="authPassword"
+                  name="passwd"
+                  placeholder="Password"
+                />
+              </div>
+              <div class="mb-3">
+                <button type="submit" class="btn btn-primary mb-3">
+                  Login
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  </div>
-
 </html>
