--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,5 @@
 <html>
+  <title>Henson App</title>
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
